--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,9 @@
 == README
 
-This is a practice i learned from ruby on rails , try to build sth like twitter , u can get it on pptalent.heroku.com ,
-rails is awesome in building dynamic website .
-as a front-end engineer , my next step is node.js and angular.js 
+This is a practice i learned from ruby on rails , try to build sth like twitter , u can get it on 
+http://pptalent.heroku.com , rails is awesome in building dynamic website .
+
+As a front-end engineer , my next step is node.js and angular.js 
 
 If u want to learn ruby on rails ,recommend the book《Ruby on Rails Tutorial》
 u can find Chinese version in https://sellfy.com/p/qwyU/ 
