--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,8 @@
 == README
 
-This is a practice i learned from ruby on rails , try to build sth like twitter , u can get it on 
-http://pptalent.heroku.com , rails is awesome in building dynamic website .
+This is a practice i learned from ruby on rails , try to build sth like twitter 
+
+u can get it on http://pptalent.heroku.com , rails is awesome in building dynamic website .
 
 As a front-end engineer , my next step is node.js and angular.js 
 
